deploy/manifests/prod/us-east-2/tenant/storetheindex/dhfind-porvy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhfind
spec:
  replicas: 6
  selector:
    matchLabels:
      app: dhfind-porvy
  template:
    metadata:
      labels:
        app: dhfind-porvy
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: dhfind
          args:
            - '--dhstoreAddr=http://dhstore-porvy.internal.prod.cid.contact/'
            - '--stiAddr=http://indexstar:8080/'
          resources:
            limits:
              cpu: "1.5"
              memory: 2Gi
            requests:
              cpu: "1.5"
              memory: 2Gi
