deploy/manifests/prod/us-east-2/tenant/storetheindex/dhfind-porvy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhfind
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - dhfind-porvy.prod.cid.contact
      secretName: dhfind-porvy-ingress-tls
  rules:
    - host: dhfind-porvy.prod.cid.contact
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dhfind-porvy
                port:
                  number: 80
